<resources>
    <string name="app_name">Spotify</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="spotify">Spotify</string>
    <string name="image_landing">Image landing</string>
    <string name="your_music">YOUR MUSIC</string>
    <string name="tuned_to_you">Tuned to you.</string>
    <string name="btn_create_acc">Create an account</string>
    <string name="btn_login">I already have an account</string>
    <string name="sign_in">Sign in</string>
    <string name="button_back">Button back</string>
    <string name="btn_login_facebook">Login with Facebook</string>
    <string name="or">Or</string>
    <string name="edt_email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="btnSignUpFacebook">Sign up with Facebook</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="day_of_birth">Day of birth</string>
    <string name="male">Male</string>
    <string name="radFemale">Female</string>
    <string name="gender">Gender</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="tvSongName">Trúc xinh</string>
    <string name="forgotPw">Enter your email address below and follow the
        \ninstructions in the email we\'ll send you.</string>
    <string name="reset_password">Reset password</string>
    <string name="sign_up">Sign up</string>
    <string name="kind_of_music">Kind of music</string>
    <string name="image_background">Image background</string>
    <string name="song_type">Song type</string>
    <string name="playlist">Playlists</string>
    <string name="album">Album</string>
    <string name="interal_speaker">Interal Speaker</string>
    <string name="btn_back">Btn back</string>
    <string name="btn_info">Btn info</string>
    <string name="duration_format">%d:%02d</string>
    <string name="duration_unknown">--:--</string>
    <string name="find">Find</string>
    <string name="account_information">Account information</string>
    <string name="edit_profile">Edit profile</string>
    <string name="favorite_song">Favorite songs</string>
    <string name="artist">Artists</string>
    <string name="albums">Albums</string>
    <string name="library">Library</string>
    <string name="download">Downloads</string>
    <string name="sign_out">Sign out</string>
    <string name="record">Record</string>
    <string name="records">Records</string>
    <string name="genres_moods"><![CDATA[GENRES & MOODS]]></string>
    <string name="featured_album">FEATURED ALBUM</string>
    <string name="favorite_songs">Favorite songs</string>
    <string name="show_all_listening_history">SHOW ALL LISTENING HISTORY</string>
    <string name="listening_history">Listening history</string>
    <string name="favorite_album">Favorite Album</string>
    <string name="artists_you_should_follow">Artists you should follow</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="play_all">Play all</string>
    <string name="following1">Following</string>
    <string name="filter">Filter</string>
    <string name="play">Play</string>
    <string name="play_next">Play next</string>
    <string name="add_to_plaaylist">Add to plaaylist</string>
    <string name="go_to_album">Go to album</string>
    <string name="go_to_artist">Go to artist</string>
</resources>
