<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="thuy.ptithcm.spotifyclone.viewmodel.AuthViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.auth.SignInFragment">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/txtToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/sign_in" />

                <ImageView
                    android:id="@+id/btnBackSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:contentDescription="@string/button_back"
                    android:padding="@dimen/paddingDefault"
                    android:src="@drawable/ic_back_btn" />
            </FrameLayout>
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/btn_login_facebook"
            style="@style/txtHeader2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:background="@drawable/bg_rounded_corner"
            android:backgroundTint="@color/colorBlueFb"
            android:drawableStart="@drawable/ic_facebook"
            android:gravity="center"
            android:padding="@dimen/paddingDefault"
            android:text="@string/btn_login_facebook" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin">

            <TextView
                style="@style/txtSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/or" />

            <ProgressBar
                android:id="@+id/progressbarSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"
                tools:visibility="visible" />

        </RelativeLayout>

        <EditText
            android:id="@+id/edt_email"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@null"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="@dimen/default_margin"
            android:hint="@string/edt_email"
            android:importantForAutofill="yes"
            android:inputType="textEmailAddress"
            android:text="@={viewmodel.email}" />

        <EditText
            android:id="@+id/edt_password"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="19dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:singleLine="true"
            android:text="@={viewmodel.password}" />

        <TextView
            android:id="@+id/btnSignIn"
            style="@style/txtHeader2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/marginXXL"
            android:layout_marginEnd="@dimen/default_margin"
            android:background="@drawable/bg_rounded_corner"
            android:backgroundTint="@{viewmodel.isValidateEmailPassword(viewmodel.email,viewmodel.password) ? @color/colorOrange : @color/colorGrayBtnEnable}"
            android:clickable="true"
            android:enabled="@{viewmodel.isValidateEmailPassword(viewmodel.email,viewmodel.password)}"
            android:gravity="center"
            android:onClick="@{() -> viewmodel.login()}"
            android:padding="@dimen/paddingDefault"
            android:text="@string/sign_in" />

        <TextView
            android:id="@+id/btnForgotPassword"
            style="@style/txtSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/default_margin"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="@dimen/paddingDefault"
            android:text="@string/forgot_password" />

    </LinearLayout>
</layout>