<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/tbHome"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivAvt"
            android:layout_width="?actionBarSize"
            android:layout_height="?actionBarSize"
            android:onClick="showProfileFragment"
            android:padding="12dp"
            tools:ignore="OnClick"
            tools:src="@drawable/trucxinh" />

        <TextView
            android:id="@+id/edtSearchHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:drawableStart="@drawable/search_selector"
            android:drawablePadding="@dimen/default_margin"
            android:hint="@string/search"
            android:onClick="showFragmentSearch"
            android:padding="@dimen/paddingS"
            tools:ignore="OnClick" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/tbHome"
        android:background="@color/colorGrayLine"
        tools:ignore="Suspicious0dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tbHome">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewPagerBanner"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />

                <me.relex.circleindicator.CircleIndicator
                    android:id="@+id/indicatorBanner"
                    android:layout_width="wrap_content"
                    android:layout_height="13dp"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_toEndOf="@id/viewPagerBanner"
                    android:outlineSpotShadowColor="@color/colorOrange" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorGrayLine"
                tools:ignore="Suspicious0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="#F0F0F0" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorGrayLine" />

            <TextView
                android:id="@+id/tvTitlePlaylist"
                style="@style/textTitleHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/marginM"
                android:text="@string/playlist"
                android:visibility="invisible"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPlayList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/marginS"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="2"
                tools:listitem="@layout/item_playlist" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorGrayLine"
                tools:ignore="Suspicious0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="#F0F0F0" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorGrayLine" />

            <TextView
                android:id="@+id/titleArtist"
                style="@style/textTitleHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/marginM"
                android:text="@string/artists_you_should_follow"
                android:visibility="invisible"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvArtist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/marginS"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="2"
                tools:listitem="@layout/item_artist" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorGrayLine"
                tools:ignore="Suspicious0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="#F0F0F0" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorGrayLine" />

            <TextView
                android:id="@+id/tvTitleAlbum"
                style="@style/textTitleHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/marginM"
                android:text="@string/featured_album"
                android:textColor="@color/colorText"
                android:visibility="invisible"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAlbum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/marginS"
                android:layout_marginEnd="@dimen/default_margin"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="2"
                tools:listitem="@layout/item_album" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorGrayLine"
                tools:ignore="Suspicious0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="#F0F0F0" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorGrayLine" />

            <TextView
                android:id="@+id/tvTitleSongType"
                style="@style/textTitleHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/genres_moods"
                android:visibility="gone"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSongType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/marginS"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="2"
                tools:listitem="@layout/item_song_type" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>